Updated. Added Footer Section.

--- a/index.html
+++ b/index.html
@@ -79,5 +79,9 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2025 GPA Calculator. Created by Dinod Deshanjana.</p>
+    </footer>
 </body>
 </html>
