--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <table class="course-table">
                     <thead>
                         <tr>
-                            <th>Course Name</th>
+                            <th>Course Code</th>
                             <th>Credit</th>
                             <th>Grade</th>
                             <th>Action</th>
@@ -83,5 +83,7 @@
     <footer>
         <p>&copy; 2025 GPA Calculator. Created by Dinod Deshanjana.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
