--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <table class="course-table">
                     <thead>
                         <tr>
-                            <th>Course Code</th>
+                            <th>Course Name</th>
                             <th>Credit</th>
                             <th>Grade</th>
                             <th>Action</th>
