Index File Updated.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <thead>
                         <tr>
                             <th>Course Name</th>
-                            <th>Credit</th>
+                            <th>Credits</th>
                             <th>Grade</th>
                             <th>Action</th>
                         </tr>
