--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main-container">
         <h1>GPA Calculator</h1>
-        <p>Calculate Your GPA easily using this calculator. Add your course Code, credits,<br> and grades to get your current GPA.</p>
+        <p>Calculate Your GPA easily using this calculator. Add your course Codes, credits,<br> and grades to get your current GPA.</p>
 
         <div class="gpacal-interface">
             <div class="gpa-image">
